--- a/.github/workflows/supabase-migrations.yml
+++ b/.github/workflows/supabase-migrations.yml
@@ -1,5 +1,4 @@
 name: Supabase Migrations
-
 on:
   push:
     branches: ["main"]
@@ -7,15 +6,13 @@ on:
 jobs:
   migrate:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Install Supabase CLI
-        run: |
-          curl -sL https://supabase.com/install.sh | sh
-          echo "$HOME/.supabase/bin" >> $GITHUB_PATH
+      - name: Setup Supabase CLI
+        uses: supabase/setup-cli@v1
+        with:
+          version: latest
 
       - name: Link Supabase project
         run: supabase link --project-ref "${{ secrets.SUPABASE_PROJECT_REF }}"
